Moved much of the char view to chart_fragment.xml, though still running from ContactDetailFragment.java.  Created an Action_tab for starting communication actions.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -92,4 +92,8 @@
 
     <string name="drawer_open">Open navigation drawer</string>
     <string name="drawer_close">Close navigation drawer</string>
+
+
+     <string name="contact_action_fragment_title"
+            >Reach Out</string>
 </resources>
