Basic database is in place.  Working on populating it with the full list of events from wanted contacts

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -98,4 +98,7 @@
 
      <string name="contact_action_fragment_title"
             >Reach Out</string>
+
+     <string name="footer_text"
+             >Update Database</string>
 </resources>
