--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -26,6 +26,12 @@
     <string name="menu_search">Search</string>
     <string name="menu_add_contact">Add Contact</string>
     <string name="menu_edit_contact">Edit Contact</string>
+    <string name="menu_new_call">Call</string>
+    <string name="menu_new_sms">SMS</string>
+    <string name="menu_new_email">Email</string>
+    <string name="menu_new_event">New Event</string>
+
+
     <string name="no_contacts">No Contacts Found</string>
     <string name="no_contact_selected">No Contact Selected</string>
     <string name="search_hint">Find contacts</string>
