--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -33,6 +33,8 @@
     <string name="menu_remove_contact">Remove Contact</string>
     <string name="menu_accept">Accept</string>
     <string name="menu_back">Back</string>
+    <string name="menu_run_interval_stats">Collect Interval Stats</string>
+
 
     <string name="all_data">All Time</string>
     <string name="one_month_of_data">1 Month</string>
