--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -16,38 +16,70 @@
 -->
 <resources>
 
-    <string name="app_name">Good Friend</string>
+    <string name="app_name">Stacker</string>
     <string name="activity_contacts_list">Contacts List</string>
     <string name="activity_contact_detail">Contact Detail</string>
     <string name="contacts_list_search_results_title">Contacts List Search for \"%s\"</string>
     <string name="app_description">Contacts List replacement, enabling analysis of the communication quality.</string>
-    <string name="imageview_description">Contact Thumbnail</string>
-    <string name="address_button_description">View Address</string>
+    <string name="twelve_hour_time_format">HH:mm a</string>
+    <string name="ok">OK</string>
+    <string name="cancel">Cancel</string>
+    <string name="date_format">MM-dd-yyyy</string>
+
+
+    <!-- Contact List Fragment Strings -->
     <string name="menu_search">Search</string>
     <string name="menu_add_contact">Add Contact</string>
+    <string name="menu_remove_contact">Remove Contact</string>
+    <string name="menu_accept">Accept</string>
+    <string name="menu_back">Back</string>
+    <string name="no_contacts">No Contacts Found</string>
+    <string name="no_contact_selected">No Contact Selected</string>
+    <string name="search_hint">Find contacts</string>
+    <string name="default_group_not_found">Choose a Default Contact Group in the Settings</string>
+
+    <!-- Contact Detail Fragment Strings -->
+    <string name="imageview_description">Contact Thumbnail</string>
+    <string name="address_button_description">View Address</string>
+
+    <string name="no_data">No Data</string>
+    <string name="no_address">No addresses found</string>
+
     <string name="menu_edit_contact">Edit Contact</string>
     <string name="menu_new_call">Call</string>
     <string name="menu_new_sms">SMS</string>
     <string name="menu_new_email">Email</string>
     <string name="menu_new_event">New Event</string>
-    <string name="menu_remove_contact">Remove Contact</string>
-    <string name="menu_accept">Accept</string>
-    <string name="menu_back">Back</string>
     <string name="menu_run_interval_stats">Collect Interval Stats</string>
 
+    <string name="word_cloud_title">Word Cloud</string>
+    <string name="stats_title">Details</string>
+    <string name="chart_title">History</string>
+    <string name="notes_title">Notes</string>
 
     <string name="all_data">All Time</string>
     <string name="one_month_of_data">1 Month</string>
     <string name="six_months_of_data">6 Months</string>
 
+    <string name="next_version">Maybe Next Version</string>
+    <string name="action_bar_overflow_settings">Settings</string>
+    <string name="default_sms_body_message">Hey!</string>
+
+    <string name="stats_display_call_count">Call Count</string>
+    <string name="stats_display_message_count">Messages</string>
+    <string name="stats_display_word_count">Word Count</string>
+    <string name="stats_display_word_count_average">Word Count Average</string>
+    <string name="stats_display_smiley_count">Smileys</string>
+    <string name="stats_display_heart_count">Hearts/Kisses/Hugs</string>
+    <string name="stats_display_question_count">Question Marks</string>
+    <string name="stats_display_average_reply_time">Average Reply Time</string>
+    <string name="stats_display_first_person_word_count">First Person Word Count</string>
+    <string name="stats_display_second_person_work_count">Second Person Word Count</string>
+    <string name="stats_display_avg_call_duration">Average Call Duration (min)</string>
+    <string name="stats_display_accumulated_call_duration">Accumulated Call Duration (min)</string>
 
 
 
-
-    <string name="no_contacts">No Contacts Found</string>
-    <string name="no_contact_selected">No Contact Selected</string>
-    <string name="search_hint">Find contacts</string>
-    <string name="default_group_not_found">Choose a Default Contact Group in the Settings</string>
 
 
     <!-- Used for the AlphabetIndexer in ContactsListFragment to provide quick navigation by
@@ -64,30 +96,44 @@
 
     <string name="no_intent_found">No application found to handle this action</string>
 
+
+    <!-- Data import activity -->
     <string name="file_import_activity">File Selection</string>
+    <string name="file_import_select_xml">Select XML file</string>
+
+
+
+    <!-- event entry activity -->
     <string name="event_entry_activity">New Event</string>
+    <string name="entry_discarded">Entry Discarded</string>
+    <!-- Event Entry Fragment -->
+    <string-array name="array_of_duration_value_strings">
+        <item>1 Minute</item>
+        <item>5 Minutes</item>
+        <item>10 Minutes</item>
+        <item>15 Minutes</item>
+        <item>20 Minutes</item>
+        <item>30 Minutes</item>
+        <item>45 Minutes</item>
+        <item>60 Minutes</item>
+        <item>1.5 Hours</item>
+        <item>2 Hours</item>
 
+    </string-array>
 
-    <!-- Strings for Contact Detail Fragment -->
-     <string name="contact_action_fragment_title"
-         >Reach Out</string>
-
-     <string name="no_data"
-         >No Data</string>
-
-    <string name="no_address">No addresses found</string>
+    <string name="duration_prompt">Choose best event duration</string>
+    <string name="class_prompt">Select Event Class</string>
+    <string name="event_notes">Event Notes</string>
 
 
 
     <!-- Strings for preferences-->
-
     <string name="preferences_fragment">Preferences</string>
 
     <string name="contact_status_alert_preference_title"
             >Contact Alert Notifications</string>
     <string name="contact_status_alert_preference_summary"
         >Enable notifications to remind you when you\'ve neglected your friends.</string>
-
 
     <string name="update_db_preference_title"
             >Enabel Automatic Updates</string>
@@ -103,7 +149,6 @@
             >Require Power for Database Update</string>
     <string name="sync_only_with_power_preference_summary"
         >Only update the database when device is plugged in with power.</string>
-
 
     <string name="sync_with_web_sources_preference_title"
         >Sync with Web</string>
@@ -187,32 +232,11 @@
     <string name="draft">Draft</string>
 
 
-    <!-- Event Entry Fragment -->
-    <string-array name="array_of_duration_value_strings">
-        <item>1 Minute</item>
-        <item>5 Minutes</item>
-        <item>10 Minutes</item>
-        <item>15 Minutes</item>
-        <item>20 Minutes</item>
-        <item>30 Minutes</item>
-        <item>45 Minutes</item>
-        <item>60 Minutes</item>
-        <item>1.5 Hours</item>
-        <item>2 Hours</item>
-
-    </string-array>
-
-    <string name="duration_prompt">Choose best event duration</string>
-    <string name="class_prompt">Select Event Class</string>
-    <string name="event_notes">Event Notes</string>
-
-
-
     <!-- Naming for groups -->
     <string name="Week">Week</string>
     <string name="Weeks">Weeks</string>
-    <string name="Day">Day</string>
-    <string name="Days">Days</string>
+    <string name="Day">Day</string>  <!-- used in FractionView -->
+    <string name="Days">Days</string>  <!-- used in FractionView -->
     <string name="Starred">Starred in Android</string>
     <string name="misses_you">Misses you</string>
 
@@ -224,5 +248,8 @@
     <string name="contact_detail_chart_activity_label">Chart Activity</string>
 
 
+    <!-- Chart Maker -->
+    <string name="sms">SMS</string>
+    <string name="durration">Duration (min)</string>
 
 </resources>
