Implemented a trend line chart using mpandroidchartlibrary (https://github.com/PhilJay/MPAndroidChart) in the contactDetailFragment. This library seems to update often.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -25,6 +25,7 @@
     <string name="ok">OK</string>
     <string name="cancel">Cancel</string>
     <string name="date_format">MM-dd-yyyy</string>
+    <string name="point_units"> ツ</string>
 
 
     <!-- Contact List Fragment Strings -->
