Update of word cloud exclusion list.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -359,6 +359,18 @@
         <item>haven\'t</item>
         <item>was</item>
         <item>out</item>
+        <item>area</item>
+        <item>too</item>
+        <item>will</item>
+        <item>all</item>
+        <item>but</item>
+        <item>can</item>
+        <item>not</item>
+        <item>got</item>
+        <item>get</item>
+        <item>_</item>
+        <item>about</item>
+
 
 
 
