--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -206,9 +206,7 @@
     <!--These two arrays are overwritten programatically, but we still need them -->
     <string-array name="string_array_list_of_contact_groups">
         <item>Starred in Android</item>
-        <item>Socia</item>
-        <item>Collaborators</item>
-        <item>6 Weeks</item>
+        <item>@string/app_name</item>
     </string-array>
     <string-array name="contact_group_data">
         <item>0</item>
@@ -255,10 +253,9 @@
     <string name="drawer_open">Open navigation drawer</string>
     <string name="drawer_close">Close navigation drawer</string>
 
-    <string name="footer_text"
-             >Import Data</string>
-        <string name="settings_droor_text"
-            >Settings</string>
+    <string name="drawer_footer_text_import">Import Data</string>
+    <string name="drawer_footer_text_settings">Settings</string>
+    <string name="drawer_footer_text_groups">Edit Groups</string>
 
 
 
@@ -291,9 +288,10 @@
     <string name="Weeks">Weeks</string>
     <string name="Day">Day</string>  <!-- used in FractionView -->
     <string name="Days">Days</string>  <!-- used in FractionView -->
-    <string name="Starred">Starred in Android</string>
-    <string name="misses_you">Misses you</string>
-
+    <string name="group_starred">Starred in Android</string>
+    <string name="group_misses_you">Misses You</string>
+    <string name="group_app_name">@string/app_name</string>
+    <string name="group_random">Random</string>
 
     <string name="delims">[ .,?!\-]+</string>
 
@@ -312,6 +310,8 @@
     <string name="durration">Duration (min)</string>
 
 
+    <!-- Group Editor -->
+    <string name="dialog_title_enter_group_name">Enter New Group Name</string>
 
     <!--List of prepositions to remove from the word cloud -->
     <string-array name="array_of_prepositions">
@@ -391,5 +391,7 @@
 
 
     </string-array>
+
+
 
 </resources>
